<resources>
    <string name="app_name">iFound</string>
    <string name="login_logo_description">Logo</string>
    <string name="login_user_text_hint">Usuario</string>
    <string name="login_password_text_hint">Contraseña</string>
    <string name="login_btn_login">Ingresar</string>
    <string name="login_btn_sign">Registrarse</string>
    <string name="sign_user_text_hint">Usuario</string>
    <string name="sign_password_text_hint">Contraseña</string>
    <string name="sign_btn_sign">Crear cuenta</string>
    <string name="sign_btn_back">Regresar</string>
    <string name="modal_confirm">Aceptar</string>
    <string name="modal_cancel">Cancelar</string>
</resources>